[workspace]
resolver = "2"
members = [
    "distributed-cache",
    "async-runtime",
    "database-engine",
    "vm-runtime",
    "systems-monitor",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["cyber-alchemist"]

[workspace.dependencies]
tokio = { version = "1.42", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "2.0"
